started work on friends list

--- a/pages/friends/index.html
+++ b/pages/friends/index.html
@@ -8,15 +8,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h2>Dashboard</h2>
+    <h2>Friends List</h2>
     <h3 id="profileEmail"></h3>
-    <ul>
-        <li><a href="">Send friend request</a></li>
-        <li><a href="/pages/friends">See all friends</a></li>
-        <li><a href="">See all requested friend requests</a></li>
-        <li><a href="">Respond on friend requests</a></li>
-        <li><a href="/">logout</a></li>
-    </ul>
+    
     <script src="./index.js"></script>
     <script src="/shared/js/nameHeader.js"></script>
 </body>
