added server URL as constant

--- a/pages/friends/index.html
+++ b/pages/friends/index.html
@@ -11,7 +11,9 @@
     <h2>Friends List</h2>
     <h3 id="profileEmail"></h3>
     
-    <script src="./index.js"></script>
+
+    <script type="module" src="/shared/js/constants.js"></script>
+    <script type="module" src="./index.js"></script>
     <script src="/shared/js/nameHeader.js"></script>
 </body>
 </html>
