--- a/pages/signup/index.html
+++ b/pages/signup/index.html
@@ -22,6 +22,7 @@
             <button type="submit">Sign Up</button>
         </form>
     </div>
-    <script src="./index.js"></script>
+    <script type="module" src="/shared/js/constants.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
