--- a/pages/friends/index.html
+++ b/pages/friends/index.html
@@ -10,7 +10,15 @@
 <body>
     <h2>Friends List</h2>
     <h3 id="profileEmail"></h3>
-    
+    <table>
+        <thead>
+            <th>Number</th>
+            <th>Name</th>
+            <th>Host</th>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 
     <script type="module" src="/shared/js/constants.js"></script>
     <script type="module" src="./index.js"></script>
