finished sending request for freindship

--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -11,7 +11,7 @@
     <h2>Dashboard</h2>
     <h3 id="profileEmail"></h3>
     <ul>
-        <li><a href="">Send friend request</a></li>
+        <li><a href="/pages/friendship">Send friend request</a></li>
         <li><a href="/pages/friends">See all friends</a></li>
         <li><a href="">See all requested friend requests</a></li>
         <li><a href="">Respond on friend requests</a></li>
