added accepting denying request

--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -14,7 +14,7 @@
         <li><a href="/pages/friendship">Send friend request</a></li>
         <li><a href="/pages/friends">See all friends</a></li>
         <li><a href="/pages/requests">See all requested friend requests</a></li>
-        <li><a href="">Respond on friend requests</a></li>
+        <li><a href="/pages/respond">Respond on friend requests</a></li>
         <li><a href="/">logout</a></li>
     </ul>
     <script src="./index.js"></script>
