added logout functionality

--- a/pages/dashboard/index.html
+++ b/pages/dashboard/index.html
@@ -15,7 +15,7 @@
         <li><a href="/pages/friends">See all friends</a></li>
         <li><a href="/pages/requests">See all requested friend requests</a></li>
         <li><a href="/pages/respond">Respond on friend requests</a></li>
-        <li><a href="/">logout</a></li>
+        <li><a href="/" id="logoutLink">logout</a></li>
     </ul>
     <script src="./index.js"></script>
     <script src="/shared/js/nameHeader.js"></script>
